Home page fix
Removed the option to see and create wins
Removed extra space from the top of the home screen

--- a/src/App.css
+++ b/src/App.css
@@ -58,7 +58,7 @@ img {
 }
 .imgHomeBanner {
   max-width: 100%;
-  max-height:400px!important;
+  max-height:300px!important;
 }
 .mt-30{
   margin-top:30px;
